# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "InstanceScheduler-Lambda"
version = "1.5.0"
description = "AWS Instance Scheduler"
authors = ["AWS"]
packages = [{ include="instance_scheduler" }]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2023.3"
requests = "^2.28.2"
chardet = "^5.1.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.11"
botocore = "^1.9.99"
boto3 = "^1.9.99"
mock = "^2.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^1.10.4"
pytest-runner = "^2.11.1"
uuid = "^1.30"
moto = "^1.3.14"
freezegun = "^0.3.15"
black = "^23.1.0"
